[package]
name = "rasmx-blake3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2.12.0"
blake3 = { version = "1.5.0", features = ["rayon", "mmap", "neon"] }
hex = "0.4.3"
mimalloc = "0.1.39"
tokio = { version = "1.35.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"